feat(dependency-injection): BindingGraphContributor — binding graph observation layer